<resources>
    <string name="app_name">NewsAPP Reader</string>
    <string name="lastest_news">Lastest News</string>
    <string name="see_all_button">See All</string>
    <string name="powered_by_newsapi">Powered by NewsAPI</string>
    <string name="Guest_welcome">Hello, Guest User\nHere are the updated news</string>
    <string name="user_welcome">Hello, </string>
    <string name="user_welcome_2">\nHere are the updated news</string>
    <string name="favorites_archive_list">Favorites Archive List</string>
    <string name="search_here">Search here …</string>
    <string name="list_news_source">Here is the list of news source\n available on the server</string>
    <string name="home_menu">Home</string>
    <string name="newsapi_menu">NewsAPI</string>
    <string name="news_source_menu">News Source</string>
    <string name="favourite_menu">Favourite</string>
    <string name="settings_menu">Settings</string>
    <string name="full_name">Guest Mode</string>
    <string name="user_name">You are in guest mode</string>
    <string name="navgiation_drawer_open">Open Navigation Pane</string>
    <string name="navgiation_drawer_close">Close Navigation Pane</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_username_email">Enter Your Username / Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="verification_code_email">Enter the verification code sent to \nyour email:</string>
    <string name="verification_code_demo">Please click on the verification link \nsent to the email and \nclick on the confirm button to complete</string>
    <string name="not_received_yet">Not received yet ?</string>
    <string name="resend_code">Resend Email</string>
    <string name="verify_account">Verify Account</string>
    <string name="enter_verification_code">Enter Recovery Code</string>
    <string name="forgotpass_note_info">You have requested to forget password.\nPlease enter your recovery code to continue</string>
    <string name="verify">Verify Now</string>
    <string name="send_verify_code">Send</string>
    <string name="Some_things_went_wrong">Some things went wrong! Please try again.</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="settings">Settings</string>
    <string name="select_language">Select Language</string>
    <string name="change_theme">Change Theme</string>
    <string name="about_application">About Application</string>
    <string name="account_settings">Account Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="github_product_owner" translatable="false">2dgirlismywaifu (github.com)</string>
    <string name="twitter_product_owner" translatable="false">\@MyWaifuis2DGirl/Twitter</string>
    <string name="developer_product_owner">Developer/Product Owner</string>
    <string name="powered_by">Powered by</string>
    <string name="version">Version 2.1.0 (Developer Version)</string>
    <string name="note_application">For research and study only, \nthis application is not available for commercial use</string>
    <string name="microsoft_azure_portal" translatable="false">Microsoft Azure Portal</string>
    <string name="change_wallpaper">Wall</string>
    <string name="select_one_wallpaper_to_use">Select one wallpaper to use</string>
    <string name="change_wall_now">Change</string>
    <string name="change_wall_messeage">Wallpaper Changed</string>
    <string name="open_browser">Open Browser</string>
    <string name="share_news">Share</string>
    <string name="favourite_news">Favourite</string>
    <string name="mainBody">Share news</string>
    <string name="ShareTitle">\"Share with: \"</string>
    <string name="SSL_error_title">SSL Error</string>
    <string name="firstline_ssl_error_messeage">SSL Certificate Error</string>
    <string name="check_ISP_network">Please check your ISP or try again later!</string>
    <string name="help">Help</string>
    <string name="error_loading_messeage">If you see a blank page, please check your internet connection and try again.\nIf you still see a blank page, may be your ISP blocked this link.</string>
    <string name="choose_rss">Choose Source</string>
    <string name="Select_RSS_Feed">Choose one source to feed</string>
    <string name="no_topic_available">"This source has no topic: "</string>
    <string name="loading_messeage">Loading, please wait…</string>
    <string name="breakingnews_type">Breaking News</string>
    <string name="worldnews_type">World</string>
    <string name="news_type">News</string>
    <string name="sportnews_type">Sport</string>
    <string name="lawnews_type">Law</string>
    <string name="educationnews_type">Education</string>
    <string name="healthnews_type">Health</string>
    <string name="lifestylenews_type">Life Style</string>
    <string name="travelnews_type">Travel</string>
    <string name="sciencenews_type">Science</string>
    <string name="general_newsapi">General</string>
    <string name="business_newsapi">Business</string>
    <string name="entertainment_newsapi">Entertainment</string>
    <string name="health_newsapi">Health</string>
    <string name="science_newsapi">Science</string>
    <string name="sports_newsapi">Sports</string>
    <string name="technology_newsapi">Technology</string>
    <string name="choose_country_newsapi">Choose country</string>
    <string name="choose_country_hint">Choose one country to feed</string>
    <string name="source_not_choose">Please choose source</string>
    <string name="country_not_choose">Country not choose</string>
    <string name="subscribe_button">Subscribe</string>
    <string name="unsubscribe_button">Unsubscribe</string>
    <string name="list_rss_url_of_this_source">List RSS URL of this source</string>
    <string name="list_rss_type_title">Type: </string>
    <string name="rss_url" translatable="false">URL: </string>
    <string name="rss2_json_plan">Goodbye RSS2JSON API</string>
    <string name="language_change_messeage">Language Changed</string>
    <string name="follow_system">Follow System</string>
    <string name="english_language">English</string>
    <string name="vietnam_language">Tiếng Việt</string>
    <string name="change_language_will_restart_the_application">Change Language</string>
    <string name="use_chrome_custom_tabs">Use Chrome Custom Tabs</string>
    <string name="no_result_found">No result or data not available</string>
    <string name="details">Details</string>
    <string name="a_confirmation_email_has_been_sent_to_your_mailbox">A confirmation email has been sent to your mailbox</string>
    <string name="please_verify_your_email_first_with_link_sent_to_your_mailbox">Please verify your email first with link sent to your mailbox</string>
    <string name="verification_email_sent_to_your_mailbox">Verification email sent to your mailbox</string>
    <string name="sign_in_success">Sign In Success</string>
    <string name="password_is_not_same">Password is not same</string>
    <string name="password_must_be_at_least_6_character">Password must be at least 6 character</string>
    <string name="password_must_contain_at_least_1_number_1_uppercase_1_special_character">Password must contain at least 1 Number, 1 Uppercase, 1 Special character</string>
    <string name="nickname_is_already_used">Nickname is already used</string>
    <string name="email_is_already_used">Email is already used</string>
    <string name="enter_your_fullName">Enter Your Full Name</string>
    <string name="sign_out_success">Sign out success</string>
    <string name="sign_out_message">Are you sure want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="Error_login">Please check your account or password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="your_account_is_not_verified_yet_are_you_sure_to_go_back">Your account is not verified yet, are you sure to go back?</string>
    <string name="register_success">Register Success</string>
    <string name="thank_you_to_become_member_n_of_this_application">Thank you to become member\n of this application.</string>
    <string name="here_is_your_recovery_code_n_for_recovery_account">Here is your recovery code\n for recovery account</string>
    <string name="login_now">Login Now</string>
    <string name="go_back_login_screen">Go Back Login Screen</string>
    <string name="full_name_settings_account">Full Name:</string>
    <string name="user_name_settings_account">User Name:</string>
    <string name="birthday_settings_account">Birthday:</string>
    <string name="gender_settings_account">Gender:</string>
    <string name="recovery_code_account">Recovery Code</string>
    <string name="change_password_account">Change Password</string>
    <string name="change_avatar_account">Change Avatar (Gravatar)</string>
    <string name="sync_settings_account">Sync Settings</string>
    <string name="your_recovery_code_label">Your Recovery Code</string>
    <string name="request_new_recovery_code_button">Request New Recovery Code</string>
    <string name="change_password_button">Change Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="enter_your_new_password_hint">Enter Your New Password</string>
    <string name="enter_your_old_password_hint">Enter Your Old Password</string>
    <string name="see_you_again">See you again!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other_gender">Other</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="single_sign_on_can_not_edit">Single Sign On Can Not Edit</string>
    <string name="upload_avatar_user">Upload Avatar</string>
    <string name="open_photo_library">Open Photo Library</string>
    <string name="open_camera">Open Camera</string>
    <string name="cannot_open_default_camera">Cannot open default camera</string>
    <string name="enter_your_new_fullname">Enter your new fullname</string>
    <string name="please_enter_your_new_fullname">Please enter your new fullname</string>
    <string name="enter_your_new_username">Enter your new username</string>
    <string name="please_enter_your_new_username">Please enter your new username</string>
    <string name="sign_up_at_gravatar_com_and_upload_your_avatar">Sign up at Gravatar.com and upload your avatar.</string>
    <string name="we_recommend_you_to_change_your_avatar_at_gravatar_com">We recommend you to change your avatar at Gravatar.com.</string>
    <string name="gravatar_is_a_free_service_for_providing_globally_unique_avatars_for_your_email_address">Gravatar is a free service for providing globally unique avatars for your email address.</string>
    <string name="you_can_change_your_avatar_at_gravatar_com_and_it_will_be_automatically_updated_in_all_of_your_applications_that_use_gravatar">You can change your avatar at Gravatar.com and it will be automatically updated in all of your applications that use Gravatar.</string>
    <string name="go_gravatar">Go Gravatar</string>
    <string name="fullname_updated">Fullname updated</string>
    <string name="unfavourite">Unfavourite</string>
</resources>