<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright By @2dgirlismywaifu (2023) .
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/home_menu"
                    android:icon="@drawable/home_2"
                    android:title="@string/home_menu" />
                <item
                    android:id="@+id/newsapi_menu"
                    android:icon="@drawable/global"
                    android:title="@string/newsapi_menu" />
                <item
                    android:id="@+id/source_menu"
                    android:icon="@drawable/ic_baseline_source_33"
                    android:title="@string/news_source_menu" />
                <item
                    android:id="@+id/favourite_menu"
                    android:icon="@drawable/archive"
                    android:title="@string/favourite_menu" />
                <item
                    android:id="@+id/settings_menu"
                    android:icon="@drawable/setting_2"
                    android:title="@string/settings_menu" />
            </group>
        </menu>
    </item>
</menu>