<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright By @2dgirlismywaifu (2023) .
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/sharebtn"
        android:icon="@drawable/baseline_share_24"
        android:orderInCategory="100"
        android:title="@string/share_news"
        app:showAsAction="always" />
    <item
        android:id="@+id/openbrowser"
        android:icon="@drawable/baseline_open_in_browser_24"
        android:orderInCategory="100"
        android:title="@string/open_browser"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/setfavourite"
        android:icon="@drawable/baseline_favorite_border_24"
        android:orderInCategory="100"
        android:title="@string/favourite_news"
        app:showAsAction="always" />
    <item
        android:id="@+id/setunfavourite"
        android:icon="@drawable/baseline_favorite_24"
        android:orderInCategory="100"
        android:title="@string/unfavourite"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/baseline_help_24"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="always" />

</menu>