<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".java.Signed.VerifyAccountForm"
    tools:ignore="ScrollViewCount">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/BackPressed"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:background="#00FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_36"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck">

            </ImageButton>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="110dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                android:background="@mipmap/ic_launcher"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:id="@+id/SignUpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins"
                android:text="@string/verify_account"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/Verifi_account_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/verification_code_demo"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SignUpLabel" />

            <TextView
                android:id="@+id/email_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="Email"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/Verifi_account_note"
                app:layout_constraintStart_toStartOf="@+id/Verifi_account_note"
                app:layout_constraintTop_toBottomOf="@+id/Verifi_account_note"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/VerifiedButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="#0E64D2"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/verify"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/email_send"
                app:layout_constraintStart_toStartOf="@+id/email_send"
                app:layout_constraintTop_toBottomOf="@+id/email_send"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,VisualLintButtonSize" />

            <LinearLayout
                android:id="@+id/signin_label"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/VerifiedButton"
                app:layout_constraintStart_toStartOf="@+id/VerifiedButton"
                app:layout_constraintTop_toBottomOf="@+id/VerifiedButton">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/raleway"
                    android:text="@string/not_received_yet"
                    android:textAlignment="center"
                    android:textColor="#D0000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <Button
                    android:id="@+id/ResendCodeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/resend_code"
                    android:textColor="#2F89FC"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.drawerlayout.widget.DrawerLayout>